--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 28
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "net.waynepiekarski.wearsensors"
         minSdkVersion 10
-        targetSdkVersion 22
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -26,6 +26,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
 }
